--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #5effc1;
+  background-color: #40d1a1;
   font-family: "Concert One", cursive;
   font-size: 16px;
 }
@@ -65,4 +65,11 @@ li button:hover {
   width: 800px;
   margin: 0 auto;
   margin-top: 40px;
+}
+@media screen and (min-width: 400px) {
+    .todos {
+      width: 90%;
+      font-size: small;
+      }
+    
 }
