--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ li button:hover {
   margin: 0 auto;
   margin-top: 40px;
 }
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 600px) {
     .todos {
       width: 90%;
       font-size: small;
