--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #40d1a1;
+  background-color: #d4d5dd;
   font-family: "Concert One", cursive;
   font-size: 16px;
 }
@@ -30,7 +30,7 @@ li {
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 5px;
-  background-color: #ff5d88;
+  background-color: #0a0a0a;
   color: white;
   font-size: 1.5em;
   line-height: 1.5;
@@ -52,13 +52,13 @@ li button {
   border: none;
   height: 40px;
   cursor: pointer;
-  background-color: #ff9500;
+  background-color: #1bbaeb;
   color: white;
   font-size: 1em;
 }
 
 li button:hover {
-  background-color: #febc5d;
+  background-color: #2fec77;
 }
 
 .todos {
