--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ li {
   color: white;
   font-size: 1.5em;
   line-height: 1.5;
+  display: flex;
 }
 
 li:before {
@@ -66,11 +67,13 @@ li button:hover {
   width: 800px;
   margin: 0 auto;
   margin-top: 40px;
+  display: flex;
 }
 @media screen and (max-width: 600px) {
     .todos {
       width: 90%;
       font-size: small;
+      display: flex;
       }
     
 }
